[tool.poetry]
name = "flask-session"
version = "0.4.0"
description = "Fork version flask session"
authors = ["benbenbang <ben.chen@vestiairecollective.com>"]
readme = "README.md"
packages = [{include = "flask_session"}]

[tool.poetry.dependencies]
python = "^3.7.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"


[tool.poetry.group.build.dependencies]
twine = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
